--- a/request.html
+++ b/request.html
@@ -146,16 +146,20 @@
 
             <div class="flex flex-wrap mb-10 overflow-hidden text-center bg-white border-2 border-solid rounded-md rounded-b-none border-light-blue-500">
                 <div class="w-full p-6">
-                    <h3 class="mb-6 text-lg font-bold leading-none text-gray-500">
-                        Get lifetime access
-                    </h3>
-                    <p class="text-5xl font-bold text-center text-gray-700">AED 399</p>
+                    <h2 class="mb-6 text-3xl font-bold leading-none text-gray-700">
+                        Curious?
+                    </h2>
+                    <!-- <p class="text-5xl font-bold text-center text-gray-700">AED 399</p> -->
                     <p class="mt-6 mb-4 text-lg leading-relaxed">
-                        We're excited you'd like to join the first UAE's private startups community. We are in an early acceptance stage, if you'd like us to send you a reminder when we are ready, join the waiting list...
+                        Get notified when we launch late (2022)
+                    </p>
+                    <p class="mt-2 mb-4 text-gray-200 italic"></p>
+                    We promiss not to share you email.
                     </p>
                 </div>
                 <!-- typeform-widget -->
-                <div class="typeform-widget" data-url="https://form.typeform.com/to/CFDvdFhZ?typeform-medium=embed-snippet" style="width: 100%; height: 350px;"></div>
+                <div class="typeform-widget" data-url="https://form.typeform.com/to/CFDvdFhZ?typeform-medium=embed-snippet" style="width: 100%; height: 350px;">
+                </div>
                 <script>
                     (function() {
                         var qs, js, q, s, d = document,
